--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -23,16 +23,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  font_awesome_flutter: ^8.5.0
-  provider: ^4.0.2
+  font_awesome_flutter: ^9.0.0
+  provider: ^5.0.0
   transformer_page_view: ^0.1.6
   another_flushbar: ^1.10.17
+  geolocator: ^7.0.3
+  permission_handler: ^7.1.0
+  android_intent: ^2.0.0
+  grouped_checkbox: ^1.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  intl: ^0.16.1
+  intl: ^0.17.0
 
 
 dev_dependencies:
