--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -31,13 +31,15 @@ dependencies:
   permission_handler: ^7.1.0
   android_intent: ^2.0.0
   grouped_checkbox: ^1.0.0
+  flutter_datetime_picker: ^1.5.1
+  intl: ^0.17.0
+  age: ^0.0.1
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  intl: ^0.17.0
 
 
 dev_dependencies:
